HY340/PhaseB_HY340/parser.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | %empty

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | BREAK SEMICOLON
   10     | CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: assignexpr
   15     | expr PLUS expr
   16     | expr MINUS expr
   17     | expr STAR expr
   18     | expr SLASH expr
   19     | expr MOD expr
   20     | expr GREATER expr
   21     | expr GREATER_OR_EQUAL expr
   22     | expr LESSER expr
   23     | expr LESSER_OR_EQUAL expr
   24     | expr EQUAL expr
   25     | expr UNEQUAL expr
   26     | expr AND expr
   27     | expr OR expr
   28     | term

   29 term: PARENTHESES_OPEN expr PARENTHESES_CLOSE
   30     | MINUS expr
   31     | NOT expr
   32     | PLUS_PLUS lvalue
   33     | lvalue PLUS_PLUS
   34     | MINUS_MINUS lvalue
   35     | lvalue MINUS_MINUS
   36     | primary

   37 assignexpr: lvalue ASSIGN expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | PARENTHESES_OPEN funcdef PARENTHESES_CLOSE
   42        | const

   43 lvalue: ID
   44       | LOCAL ID
   45       | SCOPE ID
   46       | member

   47 member: lvalue DOT ID
   48       | lvalue BRACKET_OPEN expr BRACKET_CLOSE
   49       | call DOT ID
   50       | call BRACKET_OPEN expr BRACKET_CLOSE

   51 call: call PARENTHESES_OPEN elist PARENTHESES_CLOSE
   52     | lvalue callsuffix
   53     | PARENTHESES_OPEN funcdef PARENTHESES_CLOSE PARENTHESES_OPEN elist PARENTHESES_CLOSE

   54 callsuffix: normcall
   55           | methodcall

   56 normcall: PARENTHESES_OPEN elist PARENTHESES_CLOSE

   57 methodcall: DOT_DOT ID PARENTHESES_OPEN elist PARENTHESES_CLOSE

   58 elist: elist_plus
   59      | %empty

   60 elist_plus: expr
   61           | elist_plus COMMA expr

   62 objectdef: BRACKET_OPEN elist BRACKET_CLOSE
   63          | BRACKET_OPEN indexed BRACKET_CLOSE

   64 indexed: indexedelem
   65        | indexed COMMA indexedelem

   66 indexedelem: BLOCK_START expr COLON expr BLOCK_END

   67 $@1: %empty

   68 block: BLOCK_START $@1 stmts BLOCK_END

   69 $@2: %empty

   70 $@3: %empty

   71 $@4: %empty

   72 funcdef: FUNCTION ID $@2 PARENTHESES_OPEN $@3 idlist $@4 PARENTHESES_CLOSE block

   73 $@5: %empty

   74 $@6: %empty

   75 $@7: %empty

   76 funcdef: FUNCTION $@5 PARENTHESES_OPEN $@6 idlist $@7 PARENTHESES_CLOSE block

   77 const: INTEGER
   78      | REAL
   79      | STRING_LITERAL
   80      | NIL
   81      | IS_TRUE
   82      | IS_FALSE

   83 idlist: idlist_plus
   84       | %empty

   85 idlist_plus: ID
   86            | idlist_plus COMMA ID

   87 ifstmt: IF PARENTHESES_OPEN expr PARENTHESES_CLOSE stmt ELSE stmt
   88       | IF PARENTHESES_OPEN expr PARENTHESES_CLOSE stmt

   89 $@8: %empty

   90 whilestmt: WHILE PARENTHESES_OPEN $@8 expr PARENTHESES_CLOSE stmt

   91 $@9: %empty

   92 forstmt: FOR PARENTHESES_OPEN $@9 elist SEMICOLON expr SEMICOLON elist PARENTHESES_CLOSE stmt

   93 returnstmt: RETURN expr SEMICOLON
   94           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 43 44 45 47 49 57 72 85 86
STRING_LITERAL (259) 79
INTEGER (260) 77
REAL (261) 78
IF (262) 87 88
ELSE (263) 87
WHILE (264) 90
FOR (265) 92
FUNCTION (266) 72 76
RETURN (267) 93 94
BREAK (268) 9
CONTINUE (269) 10
AND (270) 26
NOT (271) 31
OR (272) 27
LOCAL (273) 44
IS_TRUE (274) 81
IS_FALSE (275) 82
NIL (276) 80
ASSIGN (277) 37
PLUS (278) 15
MINUS (279) 16 30
STAR (280) 17
SLASH (281) 18
MOD (282) 19
EQUAL (283) 24
UNEQUAL (284) 25
PLUS_PLUS (285) 32 33
MINUS_MINUS (286) 34 35
GREATER (287) 20
LESSER (288) 22
GREATER_OR_EQUAL (289) 21
LESSER_OR_EQUAL (290) 23
BLOCK_START (291) 66 68
BLOCK_END (292) 66 68
BRACKET_OPEN (293) 48 50 62 63
BRACKET_CLOSE (294) 48 50 62 63
PARENTHESES_OPEN (295) 29 41 51 53 56 57 72 76 87 88 90 92
PARENTHESES_CLOSE (296) 29 41 51 53 56 57 72 76 87 88 90 92
SEMICOLON (297) 4 9 10 13 92 93 94
COMMA (298) 61 65 86
COLON (299) 66
SCOPE (300) 45
DOT (301) 47 49
DOT_DOT (302) 57
UNARY_MINUS (303)
THEN (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
stmts (52)
    on left: 2 3, on right: 1 2 68
stmt (53)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 87 88 90 92
expr (54)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    4 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 37 48 50 60 61
    66 87 88 90 92 93
term (55)
    on left: 29 30 31 32 33 34 35 36, on right: 28
assignexpr (56)
    on left: 37, on right: 14
primary (57)
    on left: 38 39 40 41 42, on right: 36
lvalue (58)
    on left: 43 44 45 46, on right: 32 33 34 35 37 38 47 48 52
member (59)
    on left: 47 48 49 50, on right: 46
call (60)
    on left: 51 52 53, on right: 39 49 50 51
callsuffix (61)
    on left: 54 55, on right: 52
normcall (62)
    on left: 56, on right: 54
methodcall (63)
    on left: 57, on right: 55
elist (64)
    on left: 58 59, on right: 51 53 56 57 62 92
elist_plus (65)
    on left: 60 61, on right: 58 61
objectdef (66)
    on left: 62 63, on right: 40
indexed (67)
    on left: 64 65, on right: 63 65
indexedelem (68)
    on left: 66, on right: 64 65
block (69)
    on left: 68, on right: 11 72 76
$@1 (70)
    on left: 67, on right: 68
funcdef (71)
    on left: 72 76, on right: 12 41 53
$@2 (72)
    on left: 69, on right: 72
$@3 (73)
    on left: 70, on right: 72
$@4 (74)
    on left: 71, on right: 72
$@5 (75)
    on left: 73, on right: 76
$@6 (76)
    on left: 74, on right: 76
$@7 (77)
    on left: 75, on right: 76
const (78)
    on left: 77 78 79 80 81 82, on right: 42
idlist (79)
    on left: 83 84, on right: 72 76
idlist_plus (80)
    on left: 85 86, on right: 83 86
ifstmt (81)
    on left: 87 88, on right: 5
whilestmt (82)
    on left: 90, on right: 6
$@8 (83)
    on left: 89, on right: 90
forstmt (84)
    on left: 92, on right: 7
$@9 (85)
    on left: 91, on right: 92
returnstmt (86)
    on left: 93 94, on right: 8


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (stmts)

    program  go to state 1
    stmts    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts .
    2 stmts: stmts . stmt

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    IF                shift, and go to state 8
    WHILE             shift, and go to state 9
    FOR               shift, and go to state 10
    FUNCTION          shift, and go to state 11
    RETURN            shift, and go to state 12
    BREAK             shift, and go to state 13
    CONTINUE          shift, and go to state 14
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BLOCK_START       shift, and go to state 23
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SEMICOLON         shift, and go to state 26
    SCOPE             shift, and go to state 27

    $default  reduce using rule 1 (program)

    stmt        go to state 28
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifstmt      go to state 40
    whilestmt   go to state 41
    forstmt     go to state 42
    returnstmt  go to state 43


State 3

    0 $accept: program $end .

    $default  accept


State 4

   43 lvalue: ID .

    $default  reduce using rule 43 (lvalue)


State 5

   79 const: STRING_LITERAL .

    $default  reduce using rule 79 (const)


State 6

   77 const: INTEGER .

    $default  reduce using rule 77 (const)


State 7

   78 const: REAL .

    $default  reduce using rule 78 (const)


State 8

   87 ifstmt: IF . PARENTHESES_OPEN expr PARENTHESES_CLOSE stmt ELSE stmt
   88       | IF . PARENTHESES_OPEN expr PARENTHESES_CLOSE stmt

    PARENTHESES_OPEN  shift, and go to state 44


State 9

   90 whilestmt: WHILE . PARENTHESES_OPEN $@8 expr PARENTHESES_CLOSE stmt

    PARENTHESES_OPEN  shift, and go to state 45


State 10

   92 forstmt: FOR . PARENTHESES_OPEN $@9 elist SEMICOLON expr SEMICOLON elist PARENTHESES_CLOSE stmt

    PARENTHESES_OPEN  shift, and go to state 46


State 11

   72 funcdef: FUNCTION . ID $@2 PARENTHESES_OPEN $@3 idlist $@4 PARENTHESES_CLOSE block
   76        | FUNCTION . $@5 PARENTHESES_OPEN $@6 idlist $@7 PARENTHESES_CLOSE block

    ID  shift, and go to state 47

    $default  reduce using rule 73 ($@5)

    $@5  go to state 48


State 12

   93 returnstmt: RETURN . expr SEMICOLON
   94           | RETURN . SEMICOLON

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SEMICOLON         shift, and go to state 49
    SCOPE             shift, and go to state 27

    expr        go to state 50
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 13

    9 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 14

   10 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 15

   31 term: NOT . expr

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 53
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 16

   44 lvalue: LOCAL . ID

    ID  shift, and go to state 54


State 17

   81 const: IS_TRUE .

    $default  reduce using rule 81 (const)


State 18

   82 const: IS_FALSE .

    $default  reduce using rule 82 (const)


State 19

   80 const: NIL .

    $default  reduce using rule 80 (const)


State 20

   30 term: MINUS . expr

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 55
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 21

   32 term: PLUS_PLUS . lvalue

    ID                shift, and go to state 4
    LOCAL             shift, and go to state 16
    PARENTHESES_OPEN  shift, and go to state 56
    SCOPE             shift, and go to state 27

    lvalue  go to state 57
    member  go to state 34
    call    go to state 58


State 22

   34 term: MINUS_MINUS . lvalue

    ID                shift, and go to state 4
    LOCAL             shift, and go to state 16
    PARENTHESES_OPEN  shift, and go to state 56
    SCOPE             shift, and go to state 27

    lvalue  go to state 59
    member  go to state 34
    call    go to state 58


State 23

   68 block: BLOCK_START . $@1 stmts BLOCK_END

    $default  reduce using rule 67 ($@1)

    $@1  go to state 60


State 24

   62 objectdef: BRACKET_OPEN . elist BRACKET_CLOSE
   63          | BRACKET_OPEN . indexed BRACKET_CLOSE

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BLOCK_START       shift, and go to state 61
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    $default  reduce using rule 59 (elist)

    expr         go to state 62
    term         go to state 30
    assignexpr   go to state 31
    primary      go to state 32
    lvalue       go to state 33
    member       go to state 34
    call         go to state 35
    elist        go to state 63
    elist_plus   go to state 64
    objectdef    go to state 36
    indexed      go to state 65
    indexedelem  go to state 66
    const        go to state 39


State 25

   29 term: PARENTHESES_OPEN . expr PARENTHESES_CLOSE
   41 primary: PARENTHESES_OPEN . funcdef PARENTHESES_CLOSE
   53 call: PARENTHESES_OPEN . funcdef PARENTHESES_CLOSE PARENTHESES_OPEN elist PARENTHESES_CLOSE

    ID                shift, and go to state 4
    STRING_LITERAL    shift, and go to state 5
    INTEGER           shift, and go to state 6
    REAL              shift, and go to state 7
    FUNCTION          shift, and go to state 11
    NOT               shift, and go to state 15
    LOCAL             shift, and go to state 16
    IS_TRUE           shift, and go to state 17
    IS_FALSE          shift, and go to state 18
    NIL               shift, and go to state 19
    MINUS             shift, and go to state 20
    PLUS_PLUS         shift, and go to state 21
    MINUS_MINUS       shift, and go to state 22
    BRACKET_OPEN      shift, and go to state 24
    PARENTHESES_OPEN  shift, and go to state 25
    SCOPE             shift, and go to state 27

    expr        go to state 67
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    funcdef     go to state 68
    const       go to state 39


State 26

   13 stmt: SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 27

   45 lvalue: SCOPE . ID

    ID  shift, and go to state 69


State 28
